--- a/AppBanQuanAo/app/src/main/res/layout/fragment_ma_giam_gia.xml
+++ b/AppBanQuanAo/app/src/main/res/layout/fragment_ma_giam_gia.xml
@@ -8,8 +8,10 @@
     tools:context=".Fragment.MaGiamGia.MaGiamGiaFragment" >
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_MaGiamGia"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@drawable/gradiaent_backround"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
