--- a/AppBanQuanAo/app/src/main/res/layout/don_hang_fragment.xml
+++ b/AppBanQuanAo/app/src/main/res/layout/don_hang_fragment.xml
@@ -3,11 +3,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.GioHang.GioHangFragment">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
-
-</FrameLayout>
+    tools:context=".Fragment.GioHang.GioHangFragment"/>
